--- a/vars/main.yml
+++ b/vars/main.yml
@@ -7,16 +7,26 @@ packages_to_install:
   - python3-pip
 tmp_backup_dir: "/tmp/gitlab_backups/"
 
+backup_scripts:
+  - "local_gitlab_backup.sh"
+  - "push_gitlab_backup.sh"
+  - "push_gitlab_backup2.sh"
+
 backup_crons:
+  - name: "remove old local gitlab backup"
+    job: "/usr/bin/find /var/opt/gitlab/backups/ -ctime +7 -delete"
+    weekday: 0
+    hour: 1
+    minute: 43
   - name: "local gitlab backup"
-    script: local_gitlab_backup.sh
+    job: "/root/local_gitlab_backup.sh"
     hour: 2
     minute: 43
   - name: "push gitlab backup"
-    script: push_gitlab_backup.sh
+    job: "/root/push_gitlab_backup.sh"
     hour: 3
     minute: 43
   - name: "push gitlab backup 2"
-    script: push_gitlab_backup2.sh
+    job: "/root/push_gitlab_backup2.sh"
     hour: 4
     minute: 43
