[UPD] align with source v1.0.10

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
 # handlers file for gitlab
-- name: reconfigure gitlab
-  command: gitlab-ctl reconfigure
+- name: Reconfigure gitlab
+  ansible.builtin.command: gitlab-ctl reconfigure
