--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,13 @@
 ---
 galaxy_info:
-  author: Rémi
-  description: Role for deploying and configuring GitLab CE edition
-  company: Le Filament (https://le-filament.com)
-  license: AGPL-3.0-or-later
-  min_ansible_version: 2.1
-  platforms:
-    - name: Ubuntu
-      versions:
-        - focal
-  galaxy_tags:
-    - gitlab
+    author: lefilament
+    description: Role for deploying and configuring GitLab CE edition
+    company: Le Filament (https://le-filament.com)
+    license: AGPL-3.0-or-later
+    min_ansible_version: "2.1"
+    platforms:
+        - name: Ubuntu
+          versions:
+              - focal
+    galaxy_tags:
+        - gitlab
