--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,74 +1,75 @@
 ---
 
 - name: Install apt-transport-https package
-  package:
-    name: apt-transport-https
-    state: latest
+  ansible.builtin.package:
+      name: apt-transport-https
+      state: latest
   async: 120
   poll: 10
   when: ansible_os_family == "Debian" and not ansible_check_mode
 
 # INSTALLATION
 - name: Add GitLab GPG key to APT
-  apt_key:
-    url: "{{ gitlab_gpg_key_url }}"
+  ansible.builtin.get_url:
+      url: "{{ gitlab_gpg_key_url }}"
+      dest: /etc/apt/trusted.gpg.d/gitlab.asc
+      mode: '0644'
   when: ansible_os_family == "Debian"
 
 - name: Add GitLab repo to APT repositories
-  apt_repository:
-    repo: deb {{ gitlab_packages_url }}/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} main
-    update_cache: true
+  ansible.builtin.apt_repository:
+      repo: deb {{ gitlab_packages_url }}/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} main
+      update_cache: true
   when: ansible_os_family == "Debian"
 
 - name: Install GitLab package
-  package:
-    name: "{{ packages_to_install }}"
-    state: latest
-  async: 120
+  ansible.builtin.package:
+      name: "{{ packages_to_install }}"
+      state: latest
+  async: 900
   poll: 10
   when: not ansible_check_mode
 
 - name: Check installed GitLab package
-  package:
-    name: gitlab-ce
-    state: latest
+  ansible.builtin.package:
+      name: gitlab-ce
+      state: latest
   when: ansible_check_mode
 
 - name: Install necessary python modules
-  pip:
-    name: ['python-swiftclient', 'python-keystoneclient']
-    state: latest
+  ansible.builtin.pip:
+      name: ['python-swiftclient', 'python-keystoneclient']
+      state: latest
 
 # CONFIGURATION
 - name: Install gitlab configuration file
-  template:
-    src: gitlab.rb.j2
-    dest: "/etc/gitlab/gitlab.rb"
-    owner: root
-    group: root
-    mode: '0600'
-  notify: reconfigure gitlab
-
+  ansible.builtin.template:
+      src: gitlab.rb.j2
+      dest: "/etc/gitlab/gitlab.rb"
+      owner: root
+      group: root
+      mode: '0600'
+  notify: Reconfigure gitlab
 
 # BACKUP
 - name: Copy Backup scripts on server
-  template:
-    src: "{{ item }}.j2"
-    dest: /root/{{ item }}
-    owner: root
-    group: root
-    mode: '0700'
+  ansible.builtin.template:
+      src: "{{ item }}.j2"
+      dest: /root/{{ item }}
+      owner: root
+      group: root
+      mode: '0700'
   with_items: '{{ backup_scripts }}'
   when: inventory_hostname in groups.maintenance_contract
 
 - name: Add cron job to execute backup
-  cron:
-    name: "{{ item.name }}"
-    minute: "{{ item.minute | default('*') }}"
-    hour: "{{ item.hour | default('*') }}"
-    weekday: "{{ item.weekday | default('*') }}"
-    job: "{{ item.job }}"
+  ansible.builtin.cron:
+      name: "{{ item.name }}"
+      minute: "{{ item.minute | default('*') }}"
+      hour: "{{ item.hour | default('*') }}"
+      weekday: "{{ item.weekday | default('*') }}"
+      job: "{{ item.job }}"
   with_items: '{{ backup_crons }}'
   loop_control:
-    label: '{{ item.name }}'
+      label: '{{ item.name }}'
   when: inventory_hostname in groups.maintenance_contract
